<resources>
    <string name="app_name">RunningMan</string>
    <string name="main_page">首页</string>
    <string name="my_group">群组</string>
    <string name="sports_party">活动</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_settings">Settings</string>
    <string name="nameedit_hint">姓名</string>
    <string name="phoneedit_hint">电话／手机号码</string>
    <string name="emailedit_hint">邮件地址</string>
    <string name="default_group">默认分组</string>
    <string name="newgrouop_name_hint">请输入新建组名</string>
    <string name="nopeople_hint">当前手机中没有联系人，快去添加吧！</string>
    <string name="example">举个栗子</string>
    <string name="imgbtn_tips">这里可以设置头像</string>
    <string name="thisis">这是</string>
    <string name="interfce">接口</string>
    <string name="mygroup">我的群组</string>
    <string name="allcontacts">所有联系人</string>
    <string name="noedit_tips1">电话信息必须填写哦</string>
    <string name="noedit_tips2">电话号码格式不对哦</string>
    <string name="addcontact_success">添加成功</string>
    <string name="deletecontact_success">删除成功</string>
    <string name="delete_success">删除成功</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="paypal">支付宝</string>
    <string name="groupname">群组名称</string>
    <string name="new_group">新建分组</string>
    <string name="delete_group">删除分组</string>
    <string name="unite_group">合并分组</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="moveto">移动至</string>
    <string name="alert">组名为空时，默认为默认分组！</string>
    <string name="addgroup_success">添加分组成功</string>
    <string name="deletegroup_success">删除分组成功</string>
    <string name="unitegroup_success">合并分组成功</string>
    <string name="alert_deletecontacttitle">删除联系人</string>
    <string name="alert_deletecontactfirst">确定要删除 </string>
    <string name="alert_deletecontactlast"> 么？</string>
    <string name="alert_addnewgroup">该分组已存在</string>
    <string name="searchedithintfirst">搜索当前</string>
    <string name="searchedithintlast">位联系人</string>
    <string name="menu_one">删除联系人</string>
    <string name="menu_two">移至／加入分组</string>
    <string name="menu_three">分享二维码</string>
    <string name="unabletoaddcontact">联系人保存未成功</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wait_to_add">请稍候...</string>
    <string name="detail_name">姓名: </string>
    <string name="detail_phone">电话: </string>
    <string name="detail_email">邮箱: </string>
    <string name="tdcDialog_text">扫一扫“二维码名片”，即可添加我的联系方式到联系人</string>
    <string name="person_info_imgbtn_first">分享二维码</string>
    <string name="person_info_imgbtn_second">通话记录</string>
    <string name="person_info_imgbtn_third">收藏联系人</string>
    <string name="action_edit">编辑</string>
    <string name="toolbar_my_name_hint">我是谁 = =#</string>
    <string name="no_name">未命名</string>
    <string name="write_in_myself_succeed">名片编辑成功</string>
    <string name="write_in_myself_failed">写入失败，请重试！</string>
    <string name="addresses_walk">步行记录</string>
    <string name="addresses_run">跑步记录</string>
    <string name="address_ride">骑行记录</string>
    <string name="collect">特别关注</string>
    <string name="delete_collect">取消关注</string>
    <string name="change_personinfo_bg_string">背景</string>
    <string name="action_reserve">备份</string>
    <string name="connected_filed_tips">无法更新天气,请打开网络连接</string>
    <string name="no_phone_details">#=_=快去填写电话信息</string>
    <string name="no_email_details">#=_=快去填写邮箱信息</string>
    <string name="my_collect">我的收藏</string>
    <string name="person_info_tips1">快去填写</string>
    <string name="person_info_tips2">的贴吧信息吧</string>
    <string name="person_info_tips3">的微博信息吧</string>
    <string name="synchronized_reserve">数据上传中...</string>
    <string name="synchronized_reserve_success">数据上传成功</string>
    <string name="synchronized_reserve_failed">与服务器失去连接，数据上传失败</string>
    <string name="lack_of_myself_info">个人信息不全！快去填写个人信息吧！</string>
    <string name="network_inaccessible">网络连接异常</string>
    <string name="collect_succeed">收藏该联系人成功</string>
    <string name="collect_cancle">取消收藏该联系人成功</string>
    <string name="cannot_to_collect_myself">收藏自己没有意义哦!</string>
    <string name="action_consummate">数据完善</string>
    <string name="person_info_data">data</string>
    <string name="datePickerTitle">选择日期</string>
    <string name="timePickerTitle">选择时间</string>
    <string name="default_sexy">男</string>
    <string name="perf_name">my_name</string>
    <string name="perf_tel">my_phone</string>
    <string name="perf_email">my_email</string>
    <string name="perf_headrait">my_headrait</string>
    <string name="perf_sexy">my_sexy</string>
    <string name="perf_age">my_age</string>
    <string name="perf_birthday">my_birthday</string>
    <string name="user_uuid">user_uuid</string>
    <string name="user_name">user_name</string>
    <string name="user_password">user_password</string>
    <string name="user_tel">user_tel</string>
    <string name="user_email">user_email</string>
    <string name="notification_subtitle">Counting your steps</string>
    <string name="weather_refresh_tips">无历史数据</string>
    <string name="started">开始记步</string>
    <string name="stopped">停止记步</string>
    <string name="block_flag">blockFlag</string>
    <string name="colorbar_walktitle">截止当前已走</string>
    <string name="colorbar_runtitle">截止当前已跑</string>
    <string name="colorbar_ridetitle">截止当前已踏</string>
    <string name="colorbar_speed">当前速度</string>
    <string name="walk_percent_title">走路消耗占比</string>
    <string name="run_percent_title">跑步消耗占比</string>
    <string name="ride_percent_title">骑行消耗占比</string>
    <string name="SDD_fuckyou_unit1">米</string>
    <string name="SDD_fuckyou_unit2">卡路里</string>
    <string name="pref_walk_step">walk_step</string>
    <string name="pref_walk_distance">walk_distance</string>
    <string name="pref_walk_pace">walk_pace</string>
    <string name="pref_walk_speed">walk_speed</string>
    <string name="pref_run_step">run_step</string>
    <string name="pref_run_pace">run_pace</string>
    <string name="pref_run_speed">run_speed</string>
    <string name="pref_run_distance">run_distance</string>
    <string name="pref_number_of_pedals">number_of_pedals</string>
    <string name="pref_ride_distance">ride_distance</string>
    <string name="pref_ride_time">ride_time</string>
    <string name="pref_calories">calories</string>
    <string name="walkingsteps">Walking Steps</string>
    <string name="runningsteps">Running Steps</string>
    <string name="ridingpedals">Riding Pedals</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    <string name="datetype">dateType</string>
    <string name="datatype">dataType</string>
    <string name="period1">七日内</string>
    <string name="period2">一个月内</string>
    <string name="period3">三个月内</string>
    <string name="sport_type1">行走步数</string>
    <string name="sport_type2">行走距离</string>
    <string name="sport_type3">跑动距离</string>
    <string name="sport_type4">骑行距离</string>
    <string name="sport_type5">卡路里消耗量</string>
    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="normal_list_contacts">首字母排序</string>
    <string name="category_list_contacts">分组排序</string>
    <string name="source_contactslistfragment">ContactsListFragment</string>
    <string name="source_choosecontacts">ChooseContacts</string>
    <string name="source_addcontactspresenter">AddContactsPresenter</string>
    <string name="review_dialog_title">已选择的人员</string>
    <string name="activity_pic_show">主题展示</string>
    <string name="settings">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">基本设置</string>
    <string name="sensitivity_setting">灵敏度</string>
    <string name="sensitivity_setting_details">校准记步监控器</string>
    <string name="sensitivity_setting_title">选择灵敏度</string>
    <string name="extra_high">超高</string>
    <string name="very_high">很高</string>
    <string name="high">高</string>
    <string name="higher">比较高</string>
    <string name="medium">一般</string>
    <string name="lower">比较低</string>
    <string name="low">低</string>
    <string name="very_low">非常低</string>
    <string name="extra_low">最低</string>
    <string name="operation_level_setting">可执行层</string>
    <string name="operation_level_setting_details">设定服务可执行的优先级</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">基本单位</string>
    <string name="units_setting_details">英制或公制</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">步长</string>
    <string name="step_length_setting_details">用于行走距离，速度等计算</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">体重</string>
    <string name="body_weight_setting_details">用于卡路里计算</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">运动类型</string>
    <string name="exercise_type_setting_details">用于卡路里计算</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">预定步速</string>
    <string name="maintain_setting_details">设定一个期望步速</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
</resources>