<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.moriarty.user.runningman.Activity.AddContacts"
    tools:showIn="@layout/add_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical">
            <ImageView
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/ac_name_img"
                android:src="@drawable/ic_menu_name" />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/ac_name_edit"
                android:hint="@string/nameedit_hint"
                android:layout_toRightOf="@id/ac_name_img"
                android:inputType="textPersonName"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="50dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/w_divider_size"
            android:background="@color/lightgray" />
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical">
            <ImageView
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/ac_tel_img"
                android:src="@drawable/ic_menu_phone" />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/ac_tel_edit"
                android:hint="@string/phoneedit_hint"
                android:layout_toRightOf="@id/ac_tel_img"
                android:inputType="phone"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="50dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/w_divider_size"
            android:background="@color/lightgray" />
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical">
            <ImageView
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/ac_email_img"
                android:src="@drawable/ic_menu_email" />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/ac_email_edit"
                android:hint="@string/emailedit_hint"
                android:layout_toRightOf="@id/ac_email_img"
                android:inputType="textEmailAddress"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="50dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/w_divider_size"
            android:background="@color/lightgray" />
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical">
            <ImageView
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/ac_date_img"
                android:src="@drawable/ic_menu_birthday" />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/ac_date_edit"
                android:hint="生日"
                android:layout_toRightOf="@id/ac_date_img"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="50dp"/>
            <Button
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:id="@+id/ac_date_selectBtn"
                android:background="@drawable/addcontact_groupselect"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/w_divider_size"
            android:background="@color/lightgray" />
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical">
            <ImageView
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="9dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/ac_sexy_img"
                android:src="@drawable/ic_menu_gender" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:id="@+id/ac_sexy_text"
                android:layout_toRightOf="@id/ac_sexy_img"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:text="@string/default_sexy"
                android:textSize="18sp"/>
            <Button
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:id="@+id/ac_sexy_selectBtn"
                android:background="@drawable/addcontact_groupselect"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/w_divider_size"
            android:background="@color/lightgray" />
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical">
            <ImageView
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="9dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/ac_group_img"
                android:src="@drawable/ic_menu_group" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:id="@+id/ac_group_text"
                android:layout_toRightOf="@id/ac_group_img"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:text="@string/default_group"
                android:textSize="18sp"/>
            <Button
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:id="@+id/ac_group_selectBtn"
                android:background="@drawable/addcontact_groupselect"
                android:layout_alignParentRight="true"/>
            <Button
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:id="@+id/ac_group_addBtn"
                android:background="@drawable/groupsetting_addgroup"
                android:layout_toLeftOf="@id/ac_group_selectBtn"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/w_divider_size"
            android:background="@color/lightgray" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>