<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    >
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
        android:orientation="horizontal"
        >
        <android.support.v7.widget.CardView
            android:layout_width="@dimen/main_page_block_width"
            android:layout_height="@dimen/main_page_block_height"
            card_view:cardCornerRadius="8dp"
            android:layout_marginTop="@dimen/main_page_block_marginTop"
            android:layout_marginRight="@dimen/main_page_block_marginLeft"
            android:id="@+id/cardview_walk"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:id="@+id/mptv1"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="40sp"/>
                    <TextView android:id="@+id/step_units"
                        android:gravity="center_horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/units"
                        android:text="@string/walkingsteps"
                        android:textColor="@color/white"
                        android:paddingBottom="@dimen/padding"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/main_page_block_width"
            android:layout_height="@dimen/main_page_block_height"
            android:layout_marginTop="@dimen/main_page_block_marginTop"
            android:layout_marginLeft="@dimen/main_page_block_marginLeft"
            card_view:cardCornerRadius="8dp"
            android:id="@+id/cardview_run"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:id="@+id/mptv2"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="40sp"/>
                <TextView android:id="@+id/run_units"
                    android:gravity="center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/units"
                    android:text="@string/runningsteps"
                    android:textColor="@color/white"
                    android:paddingBottom="@dimen/padding"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/main_page_block_width"
            android:layout_height="@dimen/main_page_block_height"
            android:layout_marginTop="@dimen/main_page_block_marginTop"
            android:layout_marginRight="@dimen/main_page_block_marginLeft"
            card_view:cardCornerRadius="8dp"
            android:id="@+id/cardview_ride"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ride"
                    android:id="@+id/mptv3"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="40sp"/>
                <TextView android:id="@+id/ride_units"
                    android:gravity="center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/units"
                    android:text="@string/ridingpedals"
                    android:textColor="@color/white"
                    android:paddingBottom="@dimen/padding"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/main_page_block_width"
            android:layout_height="@dimen/main_page_block_height"
            android:layout_marginTop="@dimen/main_page_block_marginTop"
            android:layout_marginLeft="@dimen/main_page_block_marginLeft"
            card_view:cardCornerRadius="8dp"
            android:id="@+id/cardview_aq">
            <com.moriarty.user.weather.OtherUserDefind.PullRefreshLayout
                android:id="@+id/weather_refreshlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <com.moriarty.user.weather.OtherUserDefind.AqiView
                        android:id="@+id/fragment_aqi_view"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:visibility="gone"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="weather"
                        android:id="@+id/mptv4"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:visibility="gone"/>

                    <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="weather"
                        android:id="@+id/aqi_text"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:visibility="gone"/>-->

                </LinearLayout>
            </com.moriarty.user.weather.OtherUserDefind.PullRefreshLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/main_page_block_width"
            android:layout_height="@dimen/main_page_block_height"
            android:layout_marginTop="@dimen/main_page_block_marginTop"
            android:layout_marginRight="@dimen/main_page_block_marginLeft"
            card_view:cardCornerRadius="8dp"
            android:id="@+id/cardview_calories"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:id="@+id/mptv5"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="40sp"/>
                <TextView android:id="@+id/calories_units"
                    android:gravity="center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/units"
                    android:text="@string/calories_burned"
                    android:paddingBottom="@dimen/padding"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/main_page_block_width"
            android:layout_height="@dimen/main_page_block_height"
            android:layout_marginTop="@dimen/main_page_block_marginTop"
            android:layout_marginLeft="@dimen/main_page_block_marginLeft"
            card_view:cardCornerRadius="8dp"
            android:id="@+id/cardview_history"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:text="history"
                    android:id="@+id/mpimg6"
                    android:background="@drawable/history_record"
                    android:layout_gravity="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </GridLayout>
</LinearLayout>